@@ -9,3 +9,4 @@ gem 'kwalify', '~>0.7'
 gem 'actionmailer', '~>3.2.9'
 gem 'sqlite3', '~>1.3'
 gem 'typhoeus', '~>0.5'
+gem 'money', '~>5.0.0'
