@@ -1,19 +1,18 @@
-* document the craigwatch features for :
-  * erb yaml processing and 
-  * Tls/smtp
+* All our report outputs have -'s now. Maybe those shouldn't be part of the title
 * Do we want to better parse zones by having a geography singleton, with a default_zone method?
+  * Remove the Time.zone = 'UTC' and see that the tests still pass (in the libcraigscrape). I think they should
   * Yea - we should...
   * Write some specs that test for this, fix them, and then adjust the old test code failures to reflect the new functionality
     (Just to be clear, the test_posting is currently *wrong*)
-* Clean up the filters code a bit and get them testing
-* And maybe we can use the typhoeus lib a bit more to better speed up the runs
-  * And we might need to add that retry-404's thing again
 ------------------------------------------
 Possible features?:
- * FEATURE: Rather then 'search/sss?query=artist+needed', maybe use CraigScrape::search_for('artist needed')
- * FEATURE: Support for post submissions?
- * FEATURE: Stats in the email: bytes transferred, generation time, urls scrapped, posts scrapped
- * FEATURE: We might want to parse the sub-locations in the geo-location code... (so for miami: brw/mia/wpb)
+  * Clean up the filters code a bit and get them testing
+  * And maybe we can use the typhoeus lib a bit more to better speed up the runs
+    * And we might need to add that retry-404's thing again
+  * FEATURE: Rather then 'search/sss?query=artist+needed', maybe use CraigScrape::search_for('artist needed')
+  * FEATURE: Support for post submissions?
+  * FEATURE: Stats in the email: bytes transferred, generation time, urls scrapped, posts scrapped
+  * FEATURE: We might want to parse the sub-locations in the geo-location code... (so for miami: brw/mia/wpb)
 
 ------------------------------------------
 # Quickie craigscrape examples/tests:
