@@ -35,17 +35,7 @@
 # Pretty useful, no?
 #
 # == Installation
-# craigwatch is coupled with libcraigscrape, and is installed via ruby gems. However, since we focused on keeping the
-# libcraigscrape download 'lightweight' some additional gems need to be installed in addition to the initial libcraigscrape
-# gem itself.
-#
-# This should take care of the craigwatch install on all systems:
-#    sudo gem install libcraigscrape kwalify activerecord actionmailer
-# Alternatively, if you've already installed libcraigscrape and want to start working with craigwatch:
-#    sudo gem install kwalify activerecord actionmailer
-#
-# This script was initially developed with activerecord 2.3, actionmailer 2.3 and kwalify 0.7, but will likely work with most
-# prior and future versions of these libraries.
+# craigwatch is coupled with libcraigscrape, and is installed via ruby gems. 
 #
 # == Usage
 # When craigwatch is invoked, it is designed to run a single report and then terminate. There is only one parameter to craigwatch, and
@@ -55,6 +45,9 @@
 # There is an included kwalify schema which can validate your definition files, but craigwatch will automatically do so at startup.
 # Probably, the best way to understand the report definition files, is to look at the annotated sample file below, and use it as a
 # starting point for your own.
+#
+# New in version 1.1.0 is ERB evaluation of the report-definiton file. This feature is automatic, just include the erb blocks you'd 
+# like, and the file will be evaluated at runtime.
 #
 # By default there is no program output, however, setting any of the following paramters to 'yes' in your definition file will turn on
 # useful debugging/logging output:
@@ -104,6 +97,9 @@
 #
 #    # The report_name is fed into Time.now.strftime, hence the formatting characters
 #    report_name: Craig Watch For Johnathan on %D at %I:%M %p
+#
+#    # Overrides the default system time zone with an EST zone
+#    tz: EST
 #
 #    email_to: Johnathan Peabody <john@example.local>
 #
@@ -201,11 +197,18 @@ class CraigReportDefinition #:nodoc:
 
   EMAIL_NAME_PARTS = /^[ ]*(.+)[ ]*\<.+\>[ ]*/
 
-  attr_reader :report_name, :email_to, :email_from, :tracking_database, :searches, :smtp_settings
+  attr_reader :report_name, :email_to, :email_from, :tracking_database, :searches, 
+    :smtp_settings, :tz
 
   def debug_database?;    @debug_database; end
   def debug_mailer?;      @debug_mailer; end
   def debug_craigscrape?; @debug_craigscrape; end
+
+  # Returns the configuration report zone, if defined. Otherwise pulls the zone
+  # from the system's default local zone
+  def tz
+    @tz || Time.new.zone
+  end
 
   def email_from
     (@email_from) ? @email_from : ('%s@%s' % [ENV['USER'], Socket.gethostname])
@@ -253,9 +256,10 @@ class CraigReportDefinition #:nodoc:
     def price_required?; @price_required; end
 
     def starting_at
-      ((@starting) ?
-        Time.strptime([@starting, 'UTC'].join(' '), "%m/%d/%Y %Z") :
-        Time.zone.now.yesterday).to_date
+      (@starting) ?
+        Date.strptime(@starting, ['%m','%d',
+          /\/(?:[\d]{4})$/.match(@starting) ? '%Y' : '%y'].join('/') ) :
+        Date.yesterday
     end
 
     def passes_filter?(post)
@@ -397,6 +401,9 @@ parser.errors.each do |e|
   puts "Definition Validation Error (line #{e.linenum}, char #{e.column}): #{e.message}"
 end and exit if parser.errors.length > 0
 
+# Set the time zone:
+Time.zone = craig_report.tz
+
 # Initialize Action Mailer:
 ActionMailer::Base.prepend_view_path(File.dirname(__FILE__))
 ActionMailer::Base.logger = Logger.new STDERR if craig_report.debug_mailer?
@@ -463,18 +470,18 @@ report_summaries = craig_report.searches.collect do |search|
     tracked_listing ||= search_track.listings.create! :url => listing.url
 
     # Gives us a sane stopping point (hopefully) :
-    last_tracked_at = tracked_listing.last_tracked_at
+    last_tracked_at = tracked_listing.last_tracked_at.try(:to_date)
     last_tracked_at ||= search.starting_at
 
     # Some more stopping points (probably):
     already_tracked_urls = tracked_listing.posts.collect{|tp| tp.url}
 
     # We'll use this in the loop to decide what posts to track:
-    newest_post_date = last_tracked_at.to_date
+    newest_post_date = last_tracked_at
 
     # We keep track of post.post_date here, b/c in some circumstances, you can be in the below loop
     # but have no post.post_date since the posting was removed and it parsed to nil
-    most_recent_posting_date = Time.zone.now.to_date
+    most_recent_posting_date = Date.new
 
     # OK - Now let's go!
     catch :list_break do
