@@ -1,17 +1,20 @@
 <h2><%=h @subject %></h2>
 <%@summaries.each do |summary| %>
-   <h3><%=h summary[:search].name%></h3>
-      <% if summary[:postings].length > 0 %>
-         <%summary[:postings].each do |post|%>
-            <%=('<p>%s <a href="%s">%s -</a>%s%s</p>' % [
-   			h(post.post_date.strftime('%b %d')),
-   			post.url,
-   			h(post.label),
-   			(post.location) ? '<font size="-1"> (%s)</font>' % h(post.location) : '',
-   			(post.has_pic_or_img?) ? ' <span style="color: orange"> img</span>': ''
-         	]).html_safe -%>
-         <% end %>
-      <% else %>
-         <p><i>No new postings were found, which matched the search criteria.</i></p>
-      <% end %>
+  <h3><%=h summary[:search].name%></h3>
+  <% if summary[:postings].length > 0 %>
+    <%summary[:postings].each do |post|%>
+      <p>
+      <%=('%s <a href="%s">%s</a>' % [ 
+   			h(post.post_date.strftime('%b %d')), post.url, h(post.title)
+      ]).html_safe %>
+      <%=([
+        (post.price) ? h(post.price.try(:format)) : nil,
+   			(post.location) ? '<font size="-1"> (%s)</font>' % h(post.location) : nil,
+   			(post.has_pic_or_img?) ? ' <span style="color: orange"> img</span>': nil
+      ].compact.join(' ')).html_safe -%>
+      </p>
+    <% end %>
+  <% else %>
+    <p><i>No new postings were found, which matched the search criteria.</i></p>
+  <% end %>
 <% end %>
